--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,5 @@
 {
-  "plugins": [
-    "prettier-plugin-tailwindcss",
-    "prettier-plugin-go-template"
-  ],
+  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-go-template"],
   "goTemplateBracketSpacing": true,
   "overrides": [
     {
