Enable push trigger and update file copy command
Updated the workflow to enable deployment on push to the main branch and modified the file copy command to include all files from the notes repository.

--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -2,9 +2,9 @@
 name: Deploy Hugo site to Pages
 
 on:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -65,7 +65,7 @@ jobs:
       - name: Clone private repo (notes)
         run: |
           git clone https://x-access-token:${{ secrets.PRIVATE_REPO }}@github.com/masputrawae/notes.git
-          cp -r ./notes/published/ content
+          cp -r ./notes/published/* content
           cp -r ./notes/__warehouse__/learning content/notes
       
       - name: Wikilink Convert
