Add 'content' directory creation in workflow
Create 'content' directory before copying files.

--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -65,6 +65,7 @@ jobs:
       - name: Clone private repo (notes)
         run: |
           git clone https://x-access-token:${{ secrets.PRIVATE_REPO }}@github.com/masputrawae/notes.git
+          mkdir content
           cp -r ./notes/published/* content
           cp -r ./notes/__warehouse__/learning content/notes
       
