--- a/data/alert.yaml
+++ b/data/alert.yaml
@@ -1,402 +1,402 @@
 tip:
   icon: fire
-  bg: bg-orange-900
-  text: text-orange-100
-  border: border-orange-700
+  bg: bg-orange-100 dark:bg-orange-900
+  text: text-orange-800 dark:text-orange-100
+  border: border-orange-300 dark:border-orange-700
 
 info:
   icon: info-circle
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 success:
   icon: clipboard-check
-  bg: bg-green-900
-  text: text-green-100
-  border: border-green-700
+  bg: bg-green-100 dark:bg-green-900
+  text: text-green-800 dark:text-green-100
+  border: border-green-300 dark:border-green-700
 
 warning:
   icon: exclamation-octagon
-  bg: bg-yellow-900
-  text: text-yellow-100
-  border: border-yellow-700
+  bg: bg-yellow-100 dark:bg-yellow-900
+  text: text-yellow-800 dark:text-yellow-100
+  border: border-yellow-300 dark:border-yellow-700
 
 danger:
   icon: lightning-fill
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
 
 error:
   icon: bug
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
 
 bug:
   icon: bug-fill
-  bg: bg-purple-900
-  text: text-purple-100
-  border: border-purple-700
+  bg: bg-purple-100 dark:bg-purple-900
+  text: text-purple-800 dark:text-purple-100
+  border: border-purple-300 dark:border-purple-700
 
 note:
   icon: pen
-  bg: bg-gray-800
-  text: text-gray-200
-  border: border-gray-600
+  bg: bg-gray-100 dark:bg-gray-800
+  text: text-gray-800 dark:text-gray-200
+  border: border-gray-300 dark:border-gray-600
 
 abstract:
   icon: clipboard-data
-  bg: bg-indigo-900
-  text: text-indigo-100
-  border: border-indigo-700
+  bg: bg-indigo-100 dark:bg-indigo-900
+  text: text-indigo-800 dark:text-indigo-100
+  border: border-indigo-300 dark:border-indigo-700
 
 todo:
   icon: check2-circle
-  bg: bg-emerald-900
-  text: text-emerald-100
-  border: border-emerald-700
+  bg: bg-emerald-100 dark:bg-emerald-900
+  text: text-emerald-800 dark:text-emerald-100
+  border: border-emerald-300 dark:border-emerald-700
 
 question:
   icon: question-circle
-  bg: bg-cyan-900
-  text: text-cyan-100
-  border: border-cyan-700
+  bg: bg-cyan-100 dark:bg-cyan-900
+  text: text-cyan-800 dark:text-cyan-100
+  border: border-cyan-300 dark:border-cyan-700
 
 failure:
   icon: x
-  bg: bg-rose-900
-  text: text-rose-100
-  border: border-rose-700
+  bg: bg-rose-100 dark:bg-rose-900
+  text: text-rose-800 dark:text-rose-100
+  border: border-rose-300 dark:border-rose-700
 
 example:
   icon: list-ul
-  bg: bg-violet-900
-  text: text-violet-100
-  border: border-violet-700
+  bg: bg-violet-100 dark:bg-violet-900
+  text: text-violet-800 dark:text-violet-100
+  border: border-violet-300 dark:border-violet-700
 
 quote:
   icon: quote
-  bg: bg-slate-800
-  text: text-slate-200
-  border: border-slate-600
+  bg: bg-slate-100 dark:bg-slate-800
+  text: text-slate-800 dark:text-slate-200
+  border: border-slate-300 dark:border-slate-600
 
 important:
   icon: exclamation-triangle-fill
-  bg: bg-amber-900
-  text: text-amber-100
-  border: border-amber-700
+  bg: bg-amber-100 dark:bg-amber-900
+  text: text-amber-800 dark:text-amber-100
+  border: border-amber-300 dark:border-amber-700
 
 history:
   icon: clock-history
-  bg: bg-teal-900
-  text: text-teal-100
-  border: border-teal-700
+  bg: bg-teal-100 dark:bg-teal-900
+  text: text-teal-800 dark:text-teal-100
+  border: border-teal-300 dark:border-teal-700
 
 journal:
   icon: journal-text
-  bg: bg-stone-800
-  text: text-stone-200
-  border: border-stone-600
+  bg: bg-stone-100 dark:bg-stone-800
+  text: text-stone-800 dark:text-stone-200
+  border: border-stone-300 dark:border-stone-600
 
 date:
   icon: calendar
-  bg: bg-fuchsia-900
-  text: text-fuchsia-100
-  border: border-fuchsia-700
+  bg: bg-fuchsia-100 dark:bg-fuchsia-900
+  text: text-fuchsia-800 dark:text-fuchsia-100
+  border: border-fuchsia-300 dark:border-fuchsia-700
 
 book:
   icon: book
-  bg: bg-amber-900
-  text: text-amber-100
-  border: border-amber-700
+  bg: bg-amber-100 dark:bg-amber-900
+  text: text-amber-800 dark:text-amber-100
+  border: border-amber-300 dark:border-amber-700
 
 search:
   icon: search
-  bg: bg-sky-900
-  text: text-sky-100
-  border: border-sky-700
+  bg: bg-sky-100 dark:bg-sky-900
+  text: text-sky-800 dark:text-sky-100
+  border: border-sky-300 dark:border-sky-700
 
 person:
   icon: person
-  bg: bg-pink-900
-  text: text-pink-100
-  border: border-pink-700
+  bg: bg-pink-100 dark:bg-pink-900
+  text: text-pink-800 dark:text-pink-100
+  border: border-pink-300 dark:border-pink-700
 
 code:
   icon: braces
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 # Social Media Colors (Dark Theme)
 alexa:
   icon: alexa
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 behance:
   icon: behance
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 bluesky:
   icon: bluesky
-  bg: bg-sky-900
-  text: text-sky-100
-  border: border-sky-700
+  bg: bg-sky-100 dark:bg-sky-900
+  text: text-sky-800 dark:text-sky-100
+  border: border-sky-300 dark:border-sky-700
 
 discord:
   icon: discord
-  bg: bg-indigo-900
-  text: text-indigo-100
-  border: border-indigo-700
+  bg: bg-indigo-100 dark:bg-indigo-900
+  text: text-indigo-800 dark:text-indigo-100
+  border: border-indigo-300 dark:border-indigo-700
 
 dribbble:
   icon: dribbble
-  bg: bg-pink-900
-  text: text-pink-100
-  border: border-pink-700
+  bg: bg-pink-100 dark:bg-pink-900
+  text: text-pink-800 dark:text-pink-100
+  border: border-pink-300 dark:border-pink-700
 
 facebook:
   icon: facebook
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 github:
   icon: github
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 gitlab:
   icon: gitlab
-  bg: bg-orange-900
-  text: text-orange-100
-  border: border-orange-700
+  bg: bg-orange-100 dark:bg-orange-900
+  text: text-orange-800 dark:text-orange-100
+  border: border-orange-300 dark:border-orange-700
 
 google:
   icon: google
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
 
 instagram:
   icon: instagram
-  bg: bg-pink-900
-  text: text-pink-100
-  border: border-pink-700
+  bg: bg-pink-100 dark:bg-pink-900
+  text: text-pink-800 dark:text-pink-100
+  border: border-pink-300 dark:border-pink-700
 
 line:
   icon: line
-  bg: bg-green-900
-  text: text-green-100
-  border: border-green-700
+  bg: bg-green-100 dark:bg-green-900
+  text: text-green-800 dark:text-green-100
+  border: border-green-300 dark:border-green-700
 
 linkedin:
   icon: linkedin
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 mastodon:
   icon: mastodon
-  bg: bg-purple-900
-  text: text-purple-100
-  border: border-purple-700
+  bg: bg-purple-100 dark:bg-purple-900
+  text: text-purple-800 dark:text-purple-100
+  border: border-purple-300 dark:border-purple-700
 
 medium:
   icon: medium
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 messenger:
   icon: messenger
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 microsoft-teams:
   icon: microsoft-teams
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 opencollective:
   icon: opencollective
-  bg: bg-pink-900
-  text: text-pink-100
-  border: border-pink-700
+  bg: bg-pink-100 dark:bg-pink-900
+  text: text-pink-800 dark:text-pink-100
+  border: border-pink-300 dark:border-pink-700
 
 paypal:
   icon: paypal
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 pinterest:
   icon: pinterest
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
 
 quora:
   icon: quora
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
 
 reddit:
   icon: reddit
-  bg: bg-orange-900
-  text: text-orange-100
-  border: border-orange-700
+  bg: bg-orange-100 dark:bg-orange-900
+  text: text-orange-800 dark:text-orange-100
+  border: border-orange-300 dark:border-orange-700
 
 signal:
   icon: signal
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 sina-weibo:
   icon: sina-weibo
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
 
 skype:
   icon: skype
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 slack:
   icon: slack
-  bg: bg-purple-900
-  text: text-purple-100
-  border: border-purple-700
+  bg: bg-purple-100 dark:bg-purple-900
+  text: text-purple-800 dark:text-purple-100
+  border: border-purple-300 dark:border-purple-700
 
 snapchat:
   icon: snapchat
-  bg: bg-yellow-900
-  text: text-yellow-100
-  border: border-yellow-700
+  bg: bg-yellow-100 dark:bg-yellow-900
+  text: text-yellow-800 dark:text-yellow-100
+  border: border-yellow-300 dark:border-yellow-700
 
 sourceforge:
   icon: sourceforge
-  bg: bg-orange-900
-  text: text-orange-100
-  border: border-orange-700
+  bg: bg-orange-100 dark:bg-orange-900
+  text: text-orange-800 dark:text-orange-100
+  border: border-orange-300 dark:border-orange-700
 
 spotify:
   icon: spotify
-  bg: bg-green-900
-  text: text-green-100
-  border: border-green-700
+  bg: bg-green-100 dark:bg-green-900
+  text: text-green-800 dark:text-green-100
+  border: border-green-300 dark:border-green-700
 
 stack-overflow:
   icon: stack-overflow
-  bg: bg-orange-900
-  text: text-orange-100
-  border: border-orange-700
+  bg: bg-orange-100 dark:bg-orange-900
+  text: text-orange-800 dark:text-orange-100
+  border: border-orange-300 dark:border-orange-700
 
 strava:
   icon: strava
-  bg: bg-orange-900
-  text: text-orange-100
-  border: border-orange-700
+  bg: bg-orange-100 dark:bg-orange-900
+  text: text-orange-800 dark:text-orange-100
+  border: border-orange-300 dark:border-orange-700
 
 substack:
   icon: substack
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 telegram:
   icon: telegram
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 tencent-qq:
   icon: tencent-qq
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 threads:
   icon: threads
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 threads-fill:
   icon: threads-fill
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 tiktok:
   icon: tiktok
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 twitch:
   icon: twitch
-  bg: bg-purple-900
-  text: text-purple-100
-  border: border-purple-700
+  bg: bg-purple-100 dark:bg-purple-900
+  text: text-purple-800 dark:text-purple-100
+  border: border-purple-300 dark:border-purple-700
 
 twitter:
   icon: twitter
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 x:
   icon: twitter-x
-  bg: bg-gray-900
-  text: text-gray-100
-  border: border-gray-700
+  bg: bg-gray-100 dark:bg-gray-900
+  text: text-gray-800 dark:text-gray-100
+  border: border-gray-300 dark:border-gray-700
 
 vimeo:
   icon: vimeo
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 wechat:
   icon: wechat
-  bg: bg-green-900
-  text: text-green-100
-  border: border-green-700
+  bg: bg-green-100 dark:bg-green-900
+  text: text-green-800 dark:text-green-100
+  border: border-green-300 dark:border-green-700
 
 whatsapp:
   icon: whatsapp
-  bg: bg-green-900
-  text: text-green-100
-  border: border-green-700
+  bg: bg-green-100 dark:bg-green-900
+  text: text-green-800 dark:text-green-100
+  border: border-green-300 dark:border-green-700
 
 wordpress:
   icon: wordpress
-  bg: bg-blue-900
-  text: text-blue-100
-  border: border-blue-700
+  bg: bg-blue-100 dark:bg-blue-900
+  text: text-blue-800 dark:text-blue-100
+  border: border-blue-300 dark:border-blue-700
 
 yelp:
   icon: yelp
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
 
 youtube:
   icon: youtube
-  bg: bg-red-900
-  text: text-red-100
-  border: border-red-700
+  bg: bg-red-100 dark:bg-red-900
+  text: text-red-800 dark:text-red-100
+  border: border-red-300 dark:border-red-700
