--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -48,8 +48,8 @@ jobs:
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
 
-      - name: Tailwind Build
-        run: pnpm run build:css
+      # - name: Tailwind Build
+      #   run: pnpm run build:css
 
       - name: Cache Restore
         id: cache-restore
