--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -48,8 +48,11 @@ jobs:
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
 
-      # - name: Tailwind Build
-      #   run: pnpm run build:css
+      - name: npm install
+        run: npm install
+
+      - name: Tailwind Build
+        run: npm run build:css
 
       - name: Cache Restore
         id: cache-restore
